api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template: 
    metadata:       
      labels:
        app: api
    spec:      
      containers:
      - name: api
        #image: fabricioveronez/pedelogo-catalogo:v1.0.0
        image: cmattos59/pedelogo-catalogo:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /read
            port: 80
            scheme: HTTP
          timeoutSeconds: 1
          failureThreshold: 3
          periodSeconds: 5
          successThreshold: 1
        startupProbe:
          httpGet:
              path: /health
              port: 80
              scheme: HTTP 
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
              path: /health
              port: 80
              scheme: HTTP 
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
