api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: api-ingress
spec:
  rules:
  - host: srv02.tce.ma.gov.br
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port: 
              number: 80
